# Chess-Logic

./: Chess.cpp  README.md  SFML.h  main.cpp
C++/: CMakeLists.txt  Chess.h  SFML.h  main.cpp
